# LibroAPI

./: .env  README.md  auth.py  config.py  crud.py  main.ipynb  main.py  memory.db  model.py  pyproject.toml  race_test.py  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 1abf923779cd_add_softdeleted_column.py  20a0092cf744_.py  81254352428e_.py  91bec26bc808_add_bookavl_membership_softdeleted_.py  99891a6651fe_.py  b0a34aba30d8_initial_database_setup.py  c9714b908433_initial_database_setup.py  d28ed7047ad2_add_bookavl_membership_softdeleted_.py
crud/: Loans_crud.py  audit_crud.py  book_crud.py  main_crud.py  users_crud.py
mock_test/: mock_conftest.py  mock_db.json  mock_test_api.py  mock_test_crud.py
router/: audit_endpoint.py  book_endpoint.py  loan_endpoint.py  main_endpoint.py  user_endpoint.py
tests/: conftest.py  test_api.py  test_crud.py
